Refs #140518 - Expand search header, too. This solves vertical align of search box and search results columns.

--- a/src/SearchBlock/styles.less
+++ b/src/SearchBlock/styles.less
@@ -86,6 +86,10 @@ div#page-document {
       padding-left: 0px !important;
     }
 
+    div.container.search-header-container {
+      width: 100%;
+    }
+
     div.sui-layout-header {
       padding-right: 0px !important;
       padding-bottom: 0px;
@@ -93,6 +97,8 @@ div#page-document {
       border-bottom: none;
 
       div.header-columns {
+        width: 100% !important;
+
         div.col-left {
           margin-top: 2.5em;
           text-align: right;
